# dwsf

./: Cargo.toml  README.md
.github/workflows/: release.yml
res/: all_words_a_n3_l8.csv  all_words_n2_l10.csv  all_words_n4_l6.csv  all_words_n5_l5.csv  aw5_results.txt  words_results.csv  words_results.txt
src/: anagram_finder.rs  clique_finder.rs  id_to_word_map.rs  id_to_words_map.rs  lib.rs  main.rs  word_graph.rs  word_id.rs  world_graph.rs
src/modules/: anagram_finder.rs  clique_finder.rs  id_to_words_map.rs  mod.rs  word_id.rs
